--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,51 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ONUW Project</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <h1>ONUW Project</h1>
-  <p>Server is running.</p>
-  <p>This is the initial client shell.</p>
+  <div id="app">
+    <h1>One Night Ultimate Werewolf</h1>
+
+    <section class="card" id="lobby">
+      <h2>Lobby</h2>
+
+      <div class="row">
+        <input id="nameInput" placeholder="Your name" />
+        <input id="roomInput" placeholder="Room code" />
+      </div>
+
+      <div class="row">
+        <button id="createRoomBtn">Create Room</button>
+        <button id="joinRoomBtn">Join Room</button>
+      </div>
+
+      <div class="row">
+        <label>
+          <input type="checkbox" id="readyCheckbox" />
+          Ready
+        </label>
+      </div>
+
+      <h3>Players</h3>
+      <ul id="playerList"></ul>
+    </section>
+
+    <section class="card hidden" id="game">
+      <h2 id="phaseTitle">Game Phase</h2>
+
+      <div class="subcard">
+        <h3>Your Role</h3>
+        <div id="roleInfo">Waiting for game to start…</div>
+      </div>
+
+      <div class="subcard hidden" id="actionArea">
+        <h3>Action</h3>
+        <div id="actionContent"></div>
+      </div>
+    </section>
+  </div>
+
+  <script src="client.js"></script>
 </body>
 </html>
